Website works , not beautiful tho

--- a/BusBoard.Web/Views/Home/BusInfo.cshtml
+++ b/BusBoard.Web/Views/Home/BusInfo.cshtml
@@ -7,4 +7,10 @@
 
 <div class="row">
     <p>You entered postcode @Model.PostCode</p>
+    <p>The closest stop point is : @Model.StopCode</p>
+    @foreach( var arrival in Model.AllArrivals)
+    {
+        @:<p> @arrival.LineName  </p>
+    }
+
 </div>
