--- a/BusBoard.Web/Views/Home/BusInfo.cshtml
+++ b/BusBoard.Web/Views/Home/BusInfo.cshtml
@@ -4,53 +4,53 @@
 }
 
 
-<style>
-    table {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        width: 100%;
-    }
-
-    td, th {
-        border: 1px solid #dddddd;
-        text-align: left;
-        padding: 8px;
-    }
-
-    tr:nth-child(even) {
-        background-color: #dddddd;
-    }
-</style>
-<h2>BusInfo</h2>
-
-<div class="row">
-    <p>You entered postcode @Model.PostCode</p>
-
-    <p>The closest stop point is : @Model.StopCode</p>
-
-
-    <table style="width:100%">
-        <tr>
-            <th>LineName</th>
-            <th>ArrivalTime</th>
-        </tr>
-        @foreach (var arrival in Model.AllArrivals.Take(5))
-        {
-            @:
-            <tr>
-                <td>@arrival.LineName</td>
-                <td>@(arrival.TimeToStation / 60) min</td>
-            </tr>
-        }
-        @if (Model.AllArrivals.Count() == 0)
-        {
-            <tr><td>No results found for that postcode. No buses nearby</td></tr>
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
         }
 
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
 
-    </table>
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+    </style>
+
+    <h2>BusInfo</h2>
+
+    <div class="row">
+        <p>You entered postcode: @Model.PostCode</p>
+
+        <p>The closest stop point is: @Model.StopCode</p>
+
+                    <table style="width:100%">
+                <tr>
+                    <th>LineName</th>
+                    <th>ArrivalTime</th>
+                </tr>
+                @foreach (var arrival in Model.AllArrivals.Take(5))
+            {
+                    @:
+                    <tr>
+                        <td>@arrival.LineName</td>
+                        <td>@(arrival.TimeToStation / 60) min</td>
+                    </tr>
+                }
+                @if (Model.AllArrivals.Count() == 0)
+            {
+                    <tr><td>No results found for that postcode.</td></tr>
+                }
+
+
+            </table>
 
 
 
-
-</div>
+    </div>
+@Scripts.Render("~/bundles/webRefresher")
