--- a/BusBoard.Web/Views/Home/BusInfo.cshtml
+++ b/BusBoard.Web/Views/Home/BusInfo.cshtml
@@ -20,6 +20,12 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
+
+        #map {
+                    height: 400px;
+                    width: 100%;
+                   
+        }
     </style>
 
     <h2>BusInfo</h2>
@@ -27,7 +33,7 @@
     <div class="row">
         <p>You entered postcode: @Model.PostCode</p>
 
-        <p>The closest stop point is: @Model.StopCode</p>
+        <p>The closest stop point is: @Model.StopCodeName</p>
 
                     <table style="width:100%">
                 <tr>
@@ -53,4 +59,29 @@
 
 
     </div>
+<div id="map">
+    <p>Map should appear here...</p>
+</div>
+<script>
+
+    function initMap() {
+        var uluru = { lat: -25.363, lng: 131.044 };
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 4,
+            center: uluru
+        });
+        var marker = new google.maps.Marker({
+            position: uluru,
+            map: map
+        });
+    }
+
+</script>
+<script async defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd1qOvCLCvc1pYe1UKVYNPXUyQlQrCvd0&callback=initMap">
+</script>
+
+@section scripts{
 @Scripts.Render("~/bundles/webRefresher")
+
+}
