--- a/BusBoard.Web/Views/Home/BusInfo.cshtml
+++ b/BusBoard.Web/Views/Home/BusInfo.cshtml
@@ -23,7 +23,7 @@
 
     #map {
                 height: 400px;
-                width: 100%;
+                width: 60%;
     }
 </style>
 
@@ -62,6 +62,7 @@
 
 
 @section scripts{
+    <script> var latitude = @Model.Latitude  ;var longitude = @Model.Longitude</script>
     @Scripts.Render("~/bundles/webRefresher")
     @Scripts.Render("~/bundles/googleMapsBusStop")
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd1qOvCLCvc1pYe1UKVYNPXUyQlQrCvd0&callback=initMap">
