Working origin and destination

--- a/BusBoard.Web/Views/Home/Index.cshtml
+++ b/BusBoard.Web/Views/Home/Index.cshtml
@@ -14,8 +14,10 @@
         {
         <fieldset>
             <legend>Post Code:</legend>
-            @Html.TextBoxFor(m => m.Postcode)
+            @Html.TextBoxFor(m => m.OriginPostcode)
 
+            <legend>Destination PostCode</legend>
+            @Html.TextBoxFor(m => m.DestinationPostcode)
             <input type="submit" value="Get Bus Info" />
         </fieldset>
         }
